--- a/Journal/Pathfinder World Tracker/index.html
+++ b/Journal/Pathfinder World Tracker/index.html
@@ -6,6 +6,8 @@
     <title>Iron Meridian Campaign Tracker</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -93,7 +95,33 @@
 
                     <!-- Quests Section -->
                     <div id="quests" class="section">
-                        <!-- Content will be dynamically loaded by QuestManager -->
+                        <div class="row">
+                            <!-- Quest List -->
+                            <div class="col-md-4">
+                                <div class="d-flex justify-content-between align-items-center mb-3">
+                                    <h2>Quests</h2>
+                                    <button id="newQuestBtn" class="btn btn-primary">
+                                        <i class="fas fa-plus"></i> New Quest
+                                    </button>
+                                </div>
+                                <div class="input-group mb-3">
+                                    <input type="text" id="questSearch" class="form-control" placeholder="Search quests...">
+                                </div>
+                                <div class="list-group" id="questList">
+                                    <!-- Quests will be loaded here -->
+                                </div>
+                            </div>
+                            <!-- Quest Details -->
+                            <div class="col-md-8">
+                                <div id="questDetails" class="card">
+                                    <div class="card-body">
+                                        <div id="questDetailsContent">
+                                            <p class="text-muted">Select a quest to view or edit its details.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Players Section -->
