--- a/Journal/Pathfinder World Tracker/index.html
+++ b/Journal/Pathfinder World Tracker/index.html
@@ -47,7 +47,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text" href="#locations">
-                                <i class="fas fa-map-marked-alt me-2"></i>World Map & Locations
+                                <i class="fas fa-map-marked-alt me-2"></i>Locations
                             </a>
                         </li>
                         <li class="nav-item">
@@ -199,12 +199,8 @@
                         <div class="row">
                             <!-- Location List -->
                             <div class="col-md-4">
-                                <div class="d-flex justify-content-between align-items-center mb-3">
-                                    <h2 class="text-accent">World Map & Locations</h2>
-                                    <button id="addLocationBtn" class="btn btn-primary">
-                                        <i class="fas fa-plus"></i> Add Location
-                                    </button>
-                                </div>
+                                <!-- Header and buttons are dynamically added by LocationManager -->
+
                                 <div class="input-group mb-3">
                                     <span class="input-group-text"><i class="fas fa-search"></i></span>
                                     <input type="text" id="locationSearch" class="form-control" placeholder="Search locations...">
