--- a/Journal/Pathfinder World Tracker/index.html
+++ b/Journal/Pathfinder World Tracker/index.html
@@ -60,6 +60,11 @@
                                 <i class="fas fa-shield-alt me-2"></i>Guild Logs
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text" href="#factions">
+                                <i class="fas fa-flag me-2"></i>Factions
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -256,6 +261,17 @@
                     <div id="guild" class="section">
                         <h2>Guild Logs</h2>
                         <!-- Guild content will be added later -->
+                    </div>
+
+                    <!-- Factions Section -->
+                    <div id="factions" class="section">
+                        <div class="row">
+                            <div class="col-12">
+                                <div id="factions-container">
+                                    <!-- Factions content will be loaded here -->
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Characters Section -->
