--- a/Journal/Pathfinder World Tracker/index.html
+++ b/Journal/Pathfinder World Tracker/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/loot.css">
     <link rel="stylesheet" href="styles/map.css">
+    <link rel="stylesheet" href="styles/toast.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -63,6 +64,11 @@
                         <li class="nav-item">
                             <a class="nav-link text" href="#factions">
                                 <i class="fas fa-flag me-2"></i>Factions
+                            </a>
+                        </li>
+                        <li class="nav-item mt-4">
+                            <a class="nav-link text" href="#" data-bs-toggle="modal" data-bs-target="#dataManagementModal">
+                                <i class="fas fa-database me-2"></i>Data Management
                             </a>
                         </li>
                     </ul>
@@ -312,10 +318,48 @@
 
     <!-- Modals and forms are now created dynamically by their respective modules -->
 
+    <!-- Data Management Modal -->
+    <div class="modal fade" id="dataManagementModal" tabindex="-1" aria-labelledby="dataManagementModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-dark text-light">
+                <div class="modal-header border-secondary">
+                    <h5 class="modal-title text-accent" id="dataManagementModalLabel">
+                        <i class="fas fa-database me-2"></i>Data Management
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-4">
+                        <h6 class="text-accent mb-3">Export Data</h6>
+                        <p class="text-muted small mb-3">Export all your campaign data to a JSON file for backup or transfer.</p>
+                        <button id="exportDataBtn" class="btn btn-outline-primary w-100">
+                            <i class="fas fa-file-export me-2"></i>Export All Data
+                        </button>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <hr class="border-secondary">
+                        <h6 class="text-accent mb-3">Import Data</h6>
+                        <p class="text-muted small mb-3">Import data from a previously exported JSON file. <strong class="text-warning">This will overwrite all current data!</strong></p>
+                        <div class="input-group mb-3">
+                            <input type="file" class="form-control bg-dark text-light border-secondary" id="importFileInput" accept=".json">
+                            <button class="btn btn-outline-secondary" type="button" id="importDataBtn" disabled>
+                                <i class="fas fa-file-import me-2"></i>Import
+                            </button>
+                        </div>
+                        <div id="importStatus" class="small"></div>
+                    </div>
+                </div>
+                <div class="modal-footer border-secondary">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
-</html> 
