--- a/Journal/Pathfinder World Tracker/index.html
+++ b/Journal/Pathfinder World Tracker/index.html
@@ -9,10 +9,7 @@
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/loot.css">
-    <link rel="stylesheet" href="styles/map.css">
-    <link rel="stylesheet" href="styles/toast.css">
+    <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -175,33 +172,51 @@
 
                     <!-- Loot Section -->
                     <div id="loot" class="section">
-                        <div class="row">
-                            <!-- Item List -->
-                            <div class="col-md-4">
-                                <div class="d-flex justify-content-between align-items-center mb-3">
-                                    <h2 class="text-accent">Loot & Curses</h2>
+                        <div class="loot-container">
+                            <!-- Loot Filters -->
+                            <div class="loot-filters">
+                                <div class="loot-filters__search">
+                                    <div class="input-group">
+                                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+                                        <input type="text" id="lootItemSearch" class="form-control" placeholder="Search items..." data-search-type="loot">
+                                    </div>
+                                </div>
+                                <div class="loot-filters__controls">
                                     <button id="addItemBtn" class="btn btn-primary">
-                                        <i class="fas fa-plus"></i> Add Item
+                                        <i class="fas fa-plus me-2"></i>Add Item
                                     </button>
                                 </div>
-                                <div class="input-group mb-3">
-                                    <span class="input-group-text"><i class="fas fa-search"></i></span>
-                                    <input type="text" id="itemSearch" class="form-control" placeholder="Search items...">
-                                </div>
-                                <div id="itemList" class="list-group" style="max-height: 600px; overflow-y: auto;">
-                                    <!-- Items will be loaded here -->
-                                </div>
                             </div>
-                            
-                            <!-- Item Details -->
-                            <div class="col-md-8">
-                                <div id="itemDetails" class="card h-100">
-                                    <div class="empty-state">
-                                        <i class="fas fa-coins fa-3x mb-3"></i>
-                                        <p class="empty-state-message">Select an item to view details</p>
+
+                            <div class="loot-content">
+                                <!-- Item List -->
+                                <div class="loot-list-container">
+                                    <h2 class="section-title">Loot & Curses</h2>
+                                    <div id="itemList" class="loot-list">
+                                        <!-- Items will be loaded here -->
+                                        <div class="loot-empty">
+                                            <div class="loot-empty__icon">
+                                                <i class="fas fa-coins"></i>
+                                            </div>
+                                            <p class="loot-empty__message">No items found</p>
+                                            <button id="addFirstItemBtn" class="btn btn-primary">
+                                                <i class="fas fa-plus me-2"></i>Add Your First Item
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <!-- Item Details -->
+                                <div class="loot-details-container">
+                                    <div id="itemDetails" class="loot-details">
+                                        <div class="loot-empty">
+                                            <i class="fas fa-coins fa-3x mb-3"></i>
+                                            <p class="loot-empty__message">Select an item to view details</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </div>
 
