Fix CSS path references

--- a/Journal/Pathfinder World Tracker/data-management.html
+++ b/Journal/Pathfinder World Tracker/data-management.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="dist/css/main.min.css">
+    <link rel="stylesheet" href="styles/main.css">
     <style>
         :root {
             --bg-dark: #1a1a2e;
