--- a/mission-reports/Shrine-of-the-Hollow-Watcher.html
+++ b/mission-reports/Shrine-of-the-Hollow-Watcher.html
@@ -3,7 +3,7 @@
   <h1 style="text-align: center; color: #4b2c20;">📜 Iron Meridian - Mission Report</h1>
 
   <h2>Mission:</h2>
-  <p>⛰️ <em>Echoes Beneath Duskspine</em></p>
+  <p>⛰️ <em>Shrine of the Hollow Watcher</em></p>
 
   <h2>Participants:</h2>
   <ul>
