--- a/Mission Board.html
+++ b/Mission Board.html
@@ -276,7 +276,42 @@ const missionData=[
   objective: "Path became impassable after further collapse; salvage inaccessible.",
   steps: [],
   extra: "Fear of gravity confirmed."
+},
+{
+  name: "The Bellows Below Bristlebarrow",
+  types: ["Exploration", "Hazard", "Psychic"],
+  rank: "Bronze",
+  length: "Short-Medium",
+  reward: "150g + Tincture of Lucid Silence",
+  status: "active",
+  location: "Bristlebarrow Hamlet, Eastern Verge",
+  objective: "Determine the source of nightly tremors and persistent sleep disturbances.",
+  steps: [
+    "Interview afflicted townsfolk",
+    "Explore the sealed basements",
+    "Uncover the void-pocket beneath the well",
+    "Calm, banish, or seal the anomaly"
+  ],
+  extra: "No deaths. But no one has slept well in five nights. One child claims her doll now hums back when scolded."
+},
+{
+  name: "Whispers from the Chimera Vault",
+  types: ["Covert", "Investigation", "Rescue"],
+  rank: "Bronze",
+  length: "Medium",
+  reward: "250g + Favor from the Grey Chain",
+  status: "active",
+  location: "Substruct Level 2, Chimera Vault District",
+  objective: "Locate missing asset linked to psychic theft from the Templars.",
+  steps: [
+    "Contact local informant (use the password: 'Golden teeth, rusty smile')",
+    "Trace the missing courier’s path",
+    "Avoid Templar patrols and sigil triggers",
+    "Recover the courier or their mind... if possible"
+  ],
+  extra: "This job is unofficial. Officially, the Guild has no opinion on the Grey Chain. Or vault-breachers. Or 'unlicensed memory theft.'"
 }
+
 ];
 
 
